made some good changes for the website change calculator

--- a/TODO.txt
+++ b/TODO.txt
@@ -6,3 +6,6 @@ capybara asks how they will pay with dubloons or USD
 have cash and coins animate up and stack on eachother (with correct change)
 
 sound effects for cash and coins? 
+
+
+have a sticky footer button thats displays how much change is there exactly
