--- a/TODO.txt
+++ b/TODO.txt
@@ -4,7 +4,13 @@ TODO
 in cappy Page
 
 image of cappy pirate
-[] have dubloons as currency
-[] display how much change is due and what was received (for the due change make it random numbers! and have it display like a manga chat bubble for cappy)
-[] have bubloons stack on counter
-[] 
+[X] have dubloons as currency 
+[X] display how much change is due and what was received (for the due change make it random numbers! and have it display like a manga chat bubble for cappy)
+[X] have bubloons stack on counter
+[] place currency on the header asking user "currency" - american flag - capybara?
+[] when clicking on give doubloons too many times the text can get scrambled haha
+
+
+
+main Page
+[X] place currency on the header asking user "currency" - american flag - capybara?
